# tabula-rasa

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: Makefile  conf.py  index.md
docs/api/: modules.md
docs/guides/: evaluation.md  installation.md  quickstart.md  training.md
examples/: basic_usage.py  custom_dataset.py
examples/notebooks/: demo_multiple_datasets.ipynb
tabula_rasa/: __init__.py  __version__.py
tabula_rasa/cli/: __init__.py  main.py
tabula_rasa/core/: __init__.py  executor.py  sketch.py
tabula_rasa/models/: __init__.py  encoders.py  qa_model.py
tabula_rasa/training/: __init__.py  dataset.py  trainer.py
tests/: __init__.py  conftest.py  test_executor.py  test_integration.py  test_models.py  test_sketch.py
